# Aqua-Vector-ControlCenter

./: CMakeLists.txt  PULL_REQUEST_TEMPLATE.md  README.md  test  test.c  test_rx  test_rx.cpp  test_self  test_self.cpp  test_tx  test_tx.cpp  test_uart  test_uart.cpp  test_uart_pc  test_uart_rx  test_uart_rx.c
docs/: RULE.md
include/: DataTypes.h  LidarNode.h
include/torpedo/: AStarPlanner.h  ControlLogic.h  CrcCalculator.h  DataTypes.h  LatencyAwareCtrl.h  LidarNode.h  NetworkNode.h  Protocol.h  ServoNode.h  UartNode.h
src/: ControlLogic.cpp  CrcCalculator.cpp  LidarNode.cpp  NetworkNode.cpp  ServoNode.cpp  UartNode.cpp  main.cpp  main_lidar_algo_test.cpp
